<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/chifacom_logo2"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenu"
            android:textColor="@color/loadingBack"
            android:fontFamily="@font/nexabold"
            android:textSize="@dimen/_15ssp"
            />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />

       <LinearLayout
           android:id="@+id/search"
           android:layout_width="@dimen/_130sdp"
           android:layout_height="@dimen/_90sdp"
           android:gravity="center"
           android:background="@drawable/transparent_circle_g"
           android:orientation="vertical">

           <ImageView
               android:id="@+id/i1"
               android:layout_width="@dimen/_30sdp"
               android:layout_height="@dimen/_30sdp"
               android:src="@drawable/search"
               />

           <TextView
               android:id="@+id/t1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/recherche_de_m_decins"
               android:fontFamily="@font/nexa_light"
               android:textColor="@color/black"
               android:padding="@dimen/_5sdp"
               android:textSize="@dimen/_11ssp"
               android:textAlignment="center"
               />
       </LinearLayout>

        <LinearLayout
            android:id="@+id/rdv"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_90sdp"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/transparent_circle_g"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/i2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/notification"
                />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdv_et_notifs"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/black"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp"
                android:textAlignment="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/compte"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_90sdp"
            android:gravity="center"
            android:background="@drawable/transparent_circle_g"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/i3"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/profile"
                />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connexion_et_inscription"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/black"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp"
                android:textAlignment="center"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/partage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/partager_l_application"
            android:fontFamily="@font/nexa_light"
            android:background="@drawable/transparent_circle_g"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>